# test_rust_2021

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dot.vimrc
.devcontainer/: devcontainer.json  docker-compose.yml
act_ptn/: Cargo.toml
ai_test1/: Cargo.toml
ai_test1/src/: bk-main.rs  bk-main2.rs  main.rs
ai_test1/src/vector/: tf_idf.rs
ai_test2/: Cargo.toml
ai_test2/input/: study_qa1.csv
ai_test2/output/: model_qa1.csv  word_list.csv
ai_test2/src/: main.rs  nlp.rs
ai_test2/src/nlp/: tf_idf.rs
at_cd1/: Cargo.toml
at_cd1/src/: atc1.rs  atc10.rs  atc11.rs  atc12.rs  atc13.rs  atc14.rs  atc15.rs  atc16.rs  atc2.rs  atc3.rs  atc4.rs  atc5.rs  atc6.rs  atc7.rs  atc8.rs  atc9.rs  atc_o1.rs  atc_o2.rs  atc_o3.rs  atc_o4.rs  atc_o5.rs  atc_o6.rs  atc_o7.rs  atc_o8.rs  atc_o9.rs  main.rs  ref1.rs
hello-rust/src/: main.rs
helloworld/src/: main.rs
mlearn1/: Cargo.toml
mlearn1/src/: main.rs
my_grep1/: Cargo.toml
my_grep1/src/: main.rs
my_test1/: Cargo.toml
my_test1/src/: lib.rs
py_test1/: Cargo.toml
py_test1/python_app/: app2.py  requirements.txt  webQueApiRunServer.py
py_test1/python_app/studyModel/qa_nango/: genre.pickle  hw_model.h5  hw_weights.h5  label_to_code.pickle  tfidf_vec.pickle
py_test1/python_app/utils/: aiNangoQa.py
py_test1/python_app/wheel-0.37.1.dist-info/: RECORD
py_test1/src/: main.rs
rust_tour1/: Cargo.toml
rust_tour1/src/: bk-clo-main.rs  bk2-main.rs  bk_main.rs  main.rs
sim_mc/: Cargo.toml
sim_mc/src/: main.rs
testHello1/: Cargo.toml
testHello1/src/: main.rs
test_aws_lambda2/: Cargo.toml
test_rust1/: Cargo.toml
test_rust1/src/: at_code1  at_code1.rs  at_code2  at_code2.rs  main.rs  myGrep  myGrep.rs  myt  myt.rs  nums.txt  test1  test1.rs  test2  test2.rs
test_web1/: Cargo.toml
test_web1/src/: main.rs
tf-example1/: Cargo.toml
tf-example1/src/: main.rs
