[package]
name = "ai_test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartcore = "0.2.0"
# polars = "0.22.8"
# polars-core = "0.22.7"
# polars = { version = "0.22.8", features = ["ndarray", "random"] }
lindera = { version = "0.14.0", features = ["full"] }
rust-tfidf = "1.1.1"