[package]
name = "at_cd1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#proconio = "0.4.3"
proconio = { version = "=0.4.3", features = ["derive"] }
cli_test_dir = "0.1.7"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "atc1"
path = "src/atc1.rs"

[[bin]]
name = "atc2"
path = "src/atc2.rs"

[[bin]]
name = "atc3"
path = "src/atc3.rs"

[[bin]]
name = "atc4"
path = "src/atc4.rs"

[[bin]]
name = "atc5"
path = "src/atc5.rs"

[[bin]]
name = "ref1"
path = "src/ref1.rs"