[package]
name = "at_cd1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#proconio = "0.4.3"
proconio = { version = "=0.4.3", features = ["derive"] }
cli_test_dir = "0.1.7"
primal = "0.2"
itertools = "0.10.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "atc1"
path = "src/atc1.rs"

[[bin]]
name = "atc2"
path = "src/atc2.rs"

[[bin]]
name = "atc3"
path = "src/atc3.rs"

[[bin]]
name = "atc4"
path = "src/atc4.rs"

[[bin]]
name = "atc5"
path = "src/atc5.rs"

[[bin]]
name = "atc6"
path = "src/atc6.rs"

[[bin]]
name = "atc7"
path = "src/atc7.rs"

[[bin]]
name = "atc8"
path = "src/atc8.rs"

[[bin]]
name = "atc9"
path = "src/atc9.rs"

[[bin]]
name = "atc10"
path = "src/atc10.rs"

[[bin]]
name = "atc11"
path = "src/atc11.rs"

[[bin]]
name = "atc12"
path = "src/atc12.rs"

[[bin]]
name = "atc13"
path = "src/atc13.rs"

[[bin]]
name = "atc14"
path = "src/atc14.rs"

[[bin]]
name = "atc15"
path = "src/atc15.rs"

[[bin]]
name = "atc16"
path = "src/atc16.rs"





[[bin]]
name = "atc_o1"
path = "src/atc_o1.rs"

[[bin]]
name = "atc_o2"
path = "src/atc_o2.rs"

[[bin]]
name = "atc_o3"
path = "src/atc_o3.rs"

[[bin]]
name = "atc_o4"
path = "src/atc_o4.rs"


[[bin]]
name = "ref1"
path = "src/ref1.rs"