[package]
name = "test_aws_lambda2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
serde_json = "1.0.81"
tokio = "1.19.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}